--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title data-lang-key="aboutTitle">关于我</title>
+    <title data-lang-key="homeTitle">我的个人网站</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -23,8 +23,8 @@
     </header>
 
     <main>
-        <h1 data-lang-key="aboutPageTitle">关于我</h1>
-        <p data-lang-key="aboutText">这里是关于我的介绍。</p>
+        <h1 data-lang-key="welcomeMessage">欢迎来到我的网站</h1>
+        <p data-lang-key="introText">这是一个多语言个人网站的示例。</p>
     </main>
 
     <footer>
