--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title data-lang-key="aboutTitle">关于我</title>
+    <title data-lang-key="contactTitle">联系我</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -23,8 +23,8 @@
     </header>
 
     <main>
-        <h1 data-lang-key="aboutPageTitle">关于我</h1>
-        <p data-lang-key="aboutText">这里是关于我的介绍。</p>
+        <h1 data-lang-key="contactPageTitle">联系我</h1>
+        <p data-lang-key="contactText">通过以下方式联系我。</p>
     </main>
 
     <footer>
