--- a/index.html
+++ b/index.html
@@ -7,26 +7,27 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html" data-lang-key="navHome">首页</a></li>
-                <li><a href="about.html" data-lang-key="navAbout">关于</a></li>
-                <li><a href="projects.html" data-lang-key="navProjects">项目</a></li>
-                <li><a href="contact.html" data-lang-key="navContact">联系</a></li>
-            </ul>
-            <div class="language-switcher">
-                <button id="lang-zh">中文</button>
-                <button id="lang-en">English</button>
-            </div>
-        </nav>
-    </header>
+    <div class="container">
+        <header>
+            <nav>
+                <ul>
+                    <li><a href="index.html" data-lang-key="navHome">首页</a></li>
+                    <li><a href="about.html" data-lang-key="navAbout">关于</a></li>
+                    <li><a href="projects.html" data-lang-key="navProjects">项目</a></li>
+                    <li><a href="contact.html" data-lang-key="navContact">联系</a></li>
+                </ul>
+                <div class="language-switcher">
+                    <button id="lang-zh">中文</button>
+                    <button id="lang-en">English</button>
+                </div>
+            </nav>
+        </header>
 
-    <main>
-        <h1 data-lang-key="welcomeMessage">欢迎来到我的网站</h1>
-        <p data-lang-key="introText">这是一个多语言个人网站的示例。</p>
-    </main>
-
+        <main>
+            <h1 data-lang-key="welcomeMessage">欢迎来到我的网站</h1>
+            <p data-lang-key="introText">这是一个多语言个人网站的示例。</p>
+        </main>
+    </div> 
     <footer>
         <p data-lang-key="footerText">&copy; 2023 你的名字</p>
     </footer>
