--- a/index.html
+++ b/index.html
@@ -24,14 +24,16 @@
         </header>
 
         <main>
-            <h1 data-lang-key="welcomeMessage">欢迎来到我的网站</h1>
-            <p data-lang-key="introText">这是一个多语言个人网站的示例。</p>
+            <section class="hero">
+                <h1 data-lang-key="welcomeMessage">欢迎来到我的网站</h1>
+                <p data-lang-key="introText">这是一个展示我的作品和经历的个人网站</p>
+            </section>
         </main>
-    </div> 
-    <footer>
-        <p data-lang-key="footerText">&copy; 2023 你的名字</p>
-    </footer>
 
+        <footer>
+            <p data-lang-key="footerText">&copy; 2023 你的名字</p>
+        </footer>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
