--- a/projects.html
+++ b/projects.html
@@ -7,30 +7,40 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html" data-lang-key="navHome">首页</a></li>
-                <li><a href="about.html" data-lang-key="navAbout">关于</a></li>
-                <li><a href="projects.html" data-lang-key="navProjects">项目</a></li>
-                <li><a href="contact.html" data-lang-key="navContact">联系</a></li>
-            </ul>
-            <div class="language-switcher">
-                <button id="lang-zh">中文</button>
-                <button id="lang-en">English</button>
-            </div>
-        </nav>
-    </header>
+    <div class="container">
+        <header>
+            <nav>
+                <ul>
+                    <li><a href="index.html" data-lang-key="navHome">首页</a></li>
+                    <li><a href="about.html" data-lang-key="navAbout">关于</a></li>
+                    <li><a href="projects.html" data-lang-key="navProjects">项目</a></li>
+                    <li><a href="contact.html" data-lang-key="navContact">联系</a></li>
+                </ul>
+                <div class="language-switcher">
+                    <button id="lang-zh">中文</button>
+                    <button id="lang-en">English</button>
+                </div>
+            </nav>
+        </header>
 
-    <main>
-        <h1 data-lang-key="projectsPageTitle">我的项目</h1>
-        <p data-lang-key="projectsText">这里展示我的项目列表。</p>
-    </main>
+        <main>
+            <section class="projects">
+                <h1 data-lang-key="projectsTitle">我的项目</h1>
+                <div class="project-grid">
+                    <div class="project-card">
+                        <img src="project1.jpg" alt="项目1">
+                        <h3 data-lang-key="project1Title">项目1</h3>
+                        <p data-lang-key="project1Desc">项目1描述...</p>
+                    </div>
+                    <!-- 更多项目卡片 -->
+                </div>
+            </section>
+        </main>
 
-    <footer>
-        <p data-lang-key="footerText">&copy; 2023 你的名字</p>
-    </footer>
-
+        <footer>
+            <p data-lang-key="footerText">&copy; 2023 你的名字</p>
+        </footer>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
